<resources>
    <string name="app_name">Optimus Tech Project 2017</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">2030312193917630</string>
    <string name="No_network_connection">No network connection</string>
    <string name="Internal_error">Internal error, please try it later</string>
    <string name="Loading">Loading …</string>
    <string name="Retry">Retry</string>
    <string name="Ok">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="Close">Close</string>
    <string name="Clear">Clear</string>
    <string name="Undo">Undo</string>
    <string name="Required_field">Required field</string>
    <string name="The_entries_must_match">The entries must match</string>
    <string name="Content_is_empty">Content is empty.</string>
    <string name="Log_in">Log in</string>
    <string name="Log_out">Log out</string>
    <string name="Log_in_to_shop_via">Log in to shop via</string>
    <string name="Log_in_to_shop_via_email">Log in to shop via email</string>
    <string name="Dont_have_an_account">Don\'t have an account?</string>
    <string name="Skip">Skip</string>
    <string name="Forgot_your_password">Forget your password?</string>
    <string name="Email_for_recovery">Email for recovery</string>
    <string name="Reset">Reset</string>
    <string name="Log_me_in">Log me in</string>
    <string name="E_MAIL">E-MAIL</string>
    <string name="FACEBOOK">FACEBOOK</string>
    <string name="Register">Register</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Check_your_email_we_sent_you_an_confirmation_email">Check your email. We sent you an confirmation email about reseting password</string>
    <string name="Facebook_login_failed">Facebook login failed.</string>
    <string name="Receiving_facebook_profile_failed">Receiving facebook profile failed</string>
    <string name="Oops_login_expired">Oops login expired</string>
    <string name="Your_session_has_expired_Please_log_in_again">Your session has expired Please log in again.</string>
    <string name="content_description_open_navigation_drawer">Open navigation drawer</string>
    <string name="content_description_close_navigation_drawer">Close navigation drawer</string>
    <string name="content_description_submenu">Populate submenu</string>
    <string name="content_description_move_right">Move righ</string>
    <string name="content_description_move_left">Move left</string>
    <string name="content_description_background">Background</string>
    <string name="content_description_back_arrow">Back arrow</string>
    <string name="content_description_intro_screen">Intro screen</string>
    <string name="content_description_product_image">Product image</string>
    <string name="content_description_shipping_info">Shipping info</string>
    <string name="minimum_password">6</string>
    <string name="auth_failed">auth failed</string>
    <string name="Continue">Continue</string>
    <string name="permission_rationale_title">We need this permission</string>
    <string name="permission_rationale_message">This permission is needed for getting your location</string>
    <string-array name="colorList">
        <item>Black</item>
        <item>White</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Brown</item>
        <item>Pink</item>
        <item>Orange</item>
        <item>Purple</item>
    </string-array>
    <string name="autocomplete_hint">Enter place name or address</string>
    <string name="selected_place">Last Selected Place:</string>
    <string name="clear_text">Clear Text</string>
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="title_activity_delivery_address">DeliveryAddress</string>
    <string name="save_and_proceed">save and proceed</string>
    <string name="pick_location_again">Change Location</string>
    <string name="house_flat_no">HOUSE/FLAT NO.</string>
    <string name="address">Address</string>
    <string name="save_delivery_location">Save Delivery Location</string>
    <string name="action_add_favourite">Add Favourite</string>
    <string name="Shopping_cart">Shopping cart</string>
    <string name="Your_cart_is_empty">Your cart is empty</string>
    <string name="START_SHOPPING">START SHOPPING</string>
    <string name="SHIPPING_AND_PAYMENT"> PAYMENT</string>
    <string name="Please_select_a_size">Please select a size.</string>
    <string name="added_to_cart">added to cart</string>
    <string name="Go_to_cart">Go to cart</string>
    <string name="Delete">Delete</string>
    <string name="Edit">Edit</string>
    <string name="Update_item">Update:</string>
    <string name="The_item_has_been_successfully_removed">The item has been successfully removed</string>
    <string name="Discount_code">Discount code</string>
    <string name="Do_you_have_a_discount_code">Do you have a discount code?</string>
    <string name="Enter_the_discount_code">Enter the discount code</string>
    <string name="Internal_error_reload_cart_please">Internal error. Reload cart please.</string>
    <string name="Order">Order</string>
    <string name="Order_colon">Order:</string>
    <string name="Date_created">Date created</string>
    <string name="Date_created_colon">Date created:</string>
    <string name="Total_price">Total price</string>
    <string name="Order_summary">Order summary</string>
    <string name="Order_history">Order history</string>
    <string name="Your_orders_history_is_empty">Your order history is empty</string>
    <string name="Order_details">Order details</string>
    <string name="Shipping">Shipping</string>
    <string name="Payment">Payment</string>
    <string name="Shipping_method">Shipping method</string>
    <string name="Choose_shipping_method">Choose shipping method</string>
    <string name="Choose_payment_method">Choose payment method</string>
    <string name="Shipping_details">Shipping details</string>
    <string name="Note">Note</string>
    <string name="Click_on_Order_to_allow_our_Terms_and_Conditions">Click on Order to allow our <![CDATA[<b><font color=#ee1f65>Terms and Conditions</b>]]></string>
    <string name="Finish_order">Finish order</string>
    <string name="Shipping_is_empty">Shipping is empty</string>
    <string name="Personal_pickup">Personal pickup</string>
    <string name="Shipping_type_colon">Shipping type:</string>
    <string name="Shipping_price_colon">Shipping price:</string>
    <string name="free">free</string>
    <string name="Summary">Summary</string>
    <string name="Total_colon">Total:</string>
    <string name="Select">Select</string>
    <string name="Open_source_libraries">Open source libraries</string>
    <string name="License_details_for_open_source_software">License details for open source software</string>
    <string name="Privacy_policy">Privacy policy</string>
    <string name="Basic_information_about_Privacy_Policy">Basic information about Privacy Policy</string>
    <string name="including_VAT">inc. VAT</string>
    <string name="Thank_you_for_your_order">Thank you for your order</string>
    <string name="Wait_for_sms_or_email_order_confirmation">Wait for &lt;b>SMS&lt;/b> or &lt;b>email&lt;/b> order confirmation.</string>
    <string name="This_is_a_sample_app">This is a sample app</string>
    <string name="Sample_app_description">Thank you for your time. To find out more about this project, please visit us here: <a href="http://openshop.io/">Openshop.io</a>.</string>
    <string name="Link_is_invalid">Link is invalid</string>
    <string name="Min">Min</string>
    <string name="Max">Max</string>
    <string name="format_space_prefix"> %1$s</string>
    <string name="format_comma_prefix">, %1$s</string>
    <string name="format_string_division">%1$s / %2$s</string>
    <string name="format_quantity">%1$d pcs</string>
    <string name="format_string_quantity">%1$s %2$dx</string>
    <string name="format_plus">+ %1$s</string>
    <string name="format_number">%1$d</string>
    <string name="format_price_range">%1$d %2$s - %3$d %4$s</string>
    <string name="format_price_discount_percents">-%1$d %%</string>
    <string name="password">Password</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="initial_quantity_value">0</string>
    <string name="Rs">\u20B9</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="card_number_hint">Enter card number</string>
    <string name="credit_card_number_hint">Enter Credit Card number</string>
    <string name="card_name_hint">Enter card holder name</string>
    <string name="card_nick_name_hint">Enter nick name</string>
    <string name="sign_in_btn_text">Sign In</string>
    <string name="resend_btn_text">Resend</string>
    <string name="reset_pass_text">Reset Password</string>
    <string name="signup_text">Sign Up</string>
    <string name="password_hint">Password</string>
    <string name="btn_login_text">Login</string>
    <string name="enter_mobile_text">Enter Mobile No</string>
    <string name="dummy_mobile_hint"></string>
    <string name="dummy_email_hint"></string>
    <string name="dummy_password"></string>
    <string name="enter_email_text">Enter Email Id</string>
    <string name="login_credentials_text">Login Credentials</string>
    <string name="dp_request_prompt">Select the DP Request Type</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_base_url">Base Url (Citrus Admin)</string>
    <string name="pref_title_base_citrus_url">Base Citrus Url (PG Url)</string>
    <string name="pref_title_dynamic_pricing_url">Dynamic Pricing Url</string>
    <string name="pref_title_dynamic_pricing_path">Dynamic Pricing Path (default: dynamic-pricing)</string>
    <string name="pref_title_signup_id">SignUp Id</string>
    <string name="pref_title_signup_secret">SignUp Secret</string>
    <string name="pref_title_signin_id">SignIn Id</string>
    <string name="pref_title_signin_secret">SignIn Secret</string>
    <string name="pref_title_vanity">Vanity</string>
    <string name="pref_title_bill_url">Bill Url</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sdk_environment">SDK Environment</string>
    <string name="sdk_environment_settings">SDK Environment Settings</string>
    <string name="pref_title_use_default_signatures">Use Default Signatures</string>
    <string name="pref_title_use_default_url">Use Default Url</string>
    <string name="prefs_bill_url_default_value">https://salty-plateau-1529.herokuapp.com/billGenerator.sandbox.php</string>
    <string name="prefs_vanity_default_value">nativeSDK</string>
    <string name="prefs_signup_secret_default_value">3be4d7bf59c109e76a3619a33c1da9a8</string>
    <string name="prefs_signup_id_default_value">9hh5re3r5q-signup</string>
    <string name="prefs_signin_id_default_value">9hh5re3r5q-signin</string>
    <string name="prefs_signin_secret_default_value">ffcfaaf6e6e78c2f654791d9d6cb7f09</string>
    <string name="prefs_environment_key">pref_environment</string>
    <string name="pref_enable_logs_text">Enable Logs</string>
    <string name="urls_preference_text">URLs</string>
    <string name="pref_email_id_text">Email ID</string>
    <string name="pref_mobile_num_text">Mobile Number</string>
    <string name="pref_mobile_num_key">pref_mobile_num_key</string>
    <string name="pref_email_id_key">pref_email_id_key</string>
    <string name="pref_show_citrus_login_screen">pref_show_citrus_login_screen</string>
    <string name="pref_key_use_default_signatures">use_default_signatures</string>
</resources>