<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <EditTextPreference
        android:defaultValue="@string/dummy_email_hint"
        android:hint="@string/pref_email_id_text"
        android:inputType="textEmailAddress"
        android:key="@string/pref_email_id_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_email_id_text" />
    <EditTextPreference
        android:defaultValue="@string/dummy_mobile_hint"
        android:hint="@string/enter_mobile_text"
        android:inputType="phone"
        android:key="@string/pref_mobile_num_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_mobile_num_text" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/pref_show_citrus_login_screen"
        android:title="Show Citrus Default Login Screen" />

</PreferenceScreen>
