<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/splash_intro_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash"
        android:contentDescription="@string/content_description_intro_screen"/>



    <RelativeLayout
        android:id="@+id/splash_content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="invisible"

        tools:visibility="visible">


        <VideoView android:id="@+id/videoView1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true">
        </VideoView>


        <!--<ImageView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:contentDescription="@string/content_description_background"-->
            <!--android:scaleType="centerCrop"-->
            <!--android:src="@drawable/login_back"/>-->



        <LinearLayout
            android:id="@+id/splash_content_no_connection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/black_transparent_70percent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="30dp"
            android:paddingLeft="@dimen/base_margin_horizontal"
            android:paddingRight="@dimen/base_margin_horizontal"
            android:paddingTop="10dp">

            <TextView
                style="@style/buttonPrimaryStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lines="2"
                android:paddingTop="20dp"
                android:text="@string/No_network_connection"

                android:textColor="@color/semi_light_transparent"
                android:textSize="18sp"
                android:textStyle="normal"/>

            <Button
                android:id="@+id/splash_re_run_btn"

                style="@style/buttonPrimaryStyle"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/base_margin_vertical"
                android:text="@string/Retry"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/splash_content_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/semi_light_transparent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="40dp"
            android:paddingLeft="@dimen/base_margin_horizontal"
            android:paddingRight="@dimen/base_margin_horizontal"
            android:paddingTop="10dp"
            android:visibility="gone">



            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/splash_continue"
                style="@style/buttonPrimaryStyle"
                android:layout_width="290dp"
                android:layout_height="wrap_content"

                android:background="@color/md_red_300"
                android:paddingTop="10dp"


                android:text="SET DELIVERY LOCATION"

                tools:visibility="visible"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/splash_set_address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:background="@color/black_transparent_70percent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="28dp"
            android:paddingLeft="@dimen/base_margin_horizontal"
            android:paddingRight="@dimen/base_margin_horizontal"
            android:paddingTop="10dp"
            android:visibility="gone"
            tools:visibility="gone">

            <LinearLayout
                android:layout_width="290sp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/save_del"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="@dimen/base_margin_vertical"
                    android:paddingTop="@dimen/base_margin_vertical"
                    android:text="@string/save_delivery_location"
                    android:textAllCaps="true"
                    android:textColor="@color/whilte"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <ImageButton
                    android:id="@+id/close_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/Cancel"
                    android:padding="5dp"
                    android:src="@drawable/close"/>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/got_address"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/colorPrimaryLight">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"


                    android:paddingEnd="@dimen/base_margin_horizontal_half"
                    android:paddingLeft="@dimen/base_margin_horizontal"
                    android:paddingRight="@dimen/base_margin_horizontal_half"
                    android:paddingStart="@dimen/base_margin_horizontal"
                    android:textColor="@color/whilte" />
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="290sp"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:background="#a9b0c3"
                >
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/house_flat"
                android:layout_width="290sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/colorPrimaryLight">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/house_flat_no"
                    android:imeActionId="124"
                    android:imeOptions="actionSend"
                    android:paddingEnd="@dimen/base_margin_horizontal_half"
                    android:paddingLeft="@dimen/base_margin_horizontal"
                    android:paddingRight="@dimen/base_margin_horizontal_half"
                    android:paddingStart="@dimen/base_margin_horizontal"
                    android:textColor="@color/whilte"/>
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="290sp"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:background="#a9b0c3"
                >
            </LinearLayout>
            <TextView
                android:id="@+id/pick_location_again"
                style="@style/buttonPrimaryStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-light"
                android:padding="16dp"
                android:text="@string/pick_location_again"
                android:textColor="@color/whilte"
                android:textSize="17sp"
                android:textStyle="italic"

                tools:targetApi="jelly_bean" />



            <Button
                android:id="@+id/save_and_proceed"
                style="@style/buttonPrimaryStyle"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"

                android:text="@string/save_and_proceed"/>
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>